# pokeage

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Anchor.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  jest.config.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  economy.rs  error.rs  main.rs  pda.rs  rpc.rs  state.rs
cli/src/commands/: config.rs  listing.rs  mod.rs  player.rs  pool.rs  sim.rs  stats.rs  version.rs
docs/: ARCHITECTURE.md  engine.md  getting-started.md  program.md  security.md  tokenomics.md
examples/: README.md  balance.ts  battle.ts  economy-quote.ts  offline.ts  simulate-run.ts
programs/pokeage/: Cargo.toml  README.md
programs/pokeage/idl/: pokeage.json
programs/pokeage/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/pokeage/src/instructions/: admin.rs  buy_card.rs  cancel_listing.rs  catch_attempt.rs  deploy_agent.rs  force_evolve.rs  gym_challenge.rs  initialize.rs  instant_sell.rs  list_card.rs  mint_card.rs  mod.rs  shared.rs
programs/pokeage/src/state/: card.rs  config.rs  listing.rs  mod.rs  player.rs  pool.rs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: accounts.ts  borsh.ts  client.ts  constants.ts  index.ts  instructions.ts  pda.ts  token.ts  types.ts
sdk/tests/: borsh.test.ts  pda.test.ts
src/: affection.ts  analytics.ts  balance.ts  battle.ts  catch.ts  constants.ts  damage.ts  encounter.ts  engine.ts  factory.ts  index.ts  moves.ts  offline.ts  power.ts  pricing.ts  progression.ts  rng.ts  save.ts  stats.ts  status.ts  team.ts  trainers.ts  typechart.ts  types.ts
src/data/: monsters.ts  world.ts
tests/: balance.test.ts  battle.test.ts  catch.test.ts  encounter.test.ts  engine.test.ts  factory.test.ts  pricing.test.ts  progression.test.ts  rng.test.ts  save.test.ts  status.test.ts  team.test.ts  trainers.test.ts  typechart.test.ts
tests/onchain/: pokeage.ts
